DT-1616: Prep work: change code to use enum types (#2521)